@@ -3,6 +3,9 @@ Revision history for Perl module Protocol::DBus
 0.17
 - BUG FIX: Fix errant remove() in Mojo.pm DESTROY handler.
 - BUG FIX: Fix nonblocking mode on pre-5.14 perls.
+- BUG FIX: Prevent inadvertent event loop stoppage after initialize()
+  in Mojo.pm.
+- BUG FIX: Make write buffering no longer auto-resume().
 - Make event loops defer polling until at least one initialize() has run.
 - Increase test coverage.
 - Work around an apparent Devel::Cover bug. (https://github.com/pjcj/Devel--Cover/issues/276)
